[package]
name = "fetch_space_bodies"
version = "0.1.0"
edition = "2024"

[features]
async = []

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }
shared = { path = "../shared" }
tokio = {version = "*", features = ["rt", "macros"]}

[build-dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde_json = "*"